# water-app

./: .gitignore  Cargo.toml  KNOWN_FRAGILE.md  README.md  package.json  pnpm-lock.yaml
.github/workflows/: release.yml  tone-audit.yml
app/: package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
app/src/: App.test.tsx  App.tsx  boot.ts  main.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: README.md  icon.icns
app/src-tauri/src/: events.rs  main.rs  orchestrator_service.rs  state.rs
app/src-tauri/src/commands/: canvas.rs  character.rs  diagnostics.rs  editor_pill.rs  events.rs  heat.rs  mod.rs  pill.rs  project.rs  provider.rs  scene.rs  uv.rs  world.rs
app/src/canvas/: CanvasFlowRibbon.tsx  CanvasIntro.tsx  CanvasSurface.tsx  ReadingOrderOverlay.tsx  SceneCard.tsx  SharedAttrConnectors.tsx
app/src/characters/: CharacterCard.tsx  CharacterIndex.test.tsx  CharacterIndex.tsx  CharacterSheet.test.tsx  CharacterSheet.tsx  InlineField.test.tsx  InlineField.tsx  flattenCharacterData.ts
crates/water-core/: Cargo.toml
crates/water-core/data/: stopwords-en.txt
crates/water-core/sql/: v10_editor_pill.sql  v1_init.sql  v2_pill_engine.sql  v3_character_hue.sql  v4_world_bible.sql  v5_heatmap.sql  v6_canvas.sql  v7_location_presence.sql  v8_trigger_feedback.sql  v9_rabbit_hole.sql
crates/water-core/src/: block.rs  chapters.rs  character.rs  character_locks.rs  db.rs  error.rs  id.rs  ipc.rs  lib.rs  migrations.rs  project.rs  rabbit.rs  rebuild.rs  repair.rs  replay_log.rs  scene.rs  scene_locks.rs  scene_md.rs  sidecar.rs  sidecar_supervisor.rs  snapshot.rs  snapshot_scheduler.rs  water_toml.rs  world.rs
crates/water-core/src/canvas/: layout.rs  mod.rs
crates/water-core/src/character/: autosuggest.rs  compact.rs  intake.rs  mod.rs  registry.rs
crates/water-core/src/editor/: diagnostics.rs  mod.rs  phrasebank.rs  store.rs
crates/water-core/src/heat/: budget.rs  compute.rs  llm.rs  mod.rs  paragraph.rs  store.rs  types.rs
crates/water-core/src/llm/: anthropic.rs  gemini.rs  kimi.rs  llamacpp.rs  mlx.rs  mod.rs  ollama.rs  openai.rs  openrouter.rs  provider.rs  router.rs  secrets.rs
crates/water-core/src/orchestrator/: anti_loop.rs  arc.rs  eviction.rs  feedback.rs  lemma_overlap.rs  mod.rs  state.rs
crates/water-core/src/orchestrator/triggers/: block_anchored_drift.rs  character_dissonance.rs  idle_pause.rs  idle_pause_with_present_character.rs  mod.rs  no_universe_yet.rs  pace_floor.rs  scene_flow_dip.rs  structural_inflection.rs  topic_drift.rs  valence_spike.rs  world_drift.rs
crates/water-core/src/post_filter/: mod.rs  tone_blacklist.rs
crates/water-core/src/prompts/: assembler.rs  loader.rs  mod.rs
crates/water-core/src/tone_audit/: mod.rs  runner.rs
crates/water-core/src/voice/: character_template.rs  mod.rs  registry.rs  router.rs  speaker.rs
crates/water-core/src/world/: collision.rs  mod.rs  registry.rs  store.rs  templates.rs  tests.rs
crates/water-core/tests/: m1_exit_criteria.rs  orchestrator_integration.rs  tone_audit_200.rs
docs/: ARCHITECTURE.md  HANDOFF.md  RELEASING.md  TESTER.md  UX_SPEC.md  m1-acceptance-checklist.md  m2-acceptance-checklist.md
docs/landing/: index.html
eval/m3_acceptance/: marcus_vale.toml
eval/m4_acceptance/: README.md  pell_library.toml
eval/m5_acceptance/: README.md  heat_demo.md
eval/m6_acceptance/: README.md
eval/tone_audit/: generate-fixtures.ps1
prompts/: anti_loop.toml  tone.toml
prompts/heat/: phrasebank.toml
prompts/tasks/: editor_polish.toml  heat_coherence.toml  heat_valence.toml  pill_dissonance_check.toml  pill_expand.toml  pill_level_0.toml  pill_regenerate.toml  rabbit_deepen_inherit.toml  rabbit_fan_4.toml  world_drift_check.toml
prompts/triggers/: block_anchored_drift.toml  character_dissonance.toml  idle_pause.toml  idle_pause_with_present_character.toml  no_universe_yet.toml  pace_floor.toml  scene_flow_dip.toml  structural_inflection.toml  topic_drift.toml  valence_spike.toml  world_drift.toml
sidecar/: README.md  pyproject.toml
sidecar/src/water_sidecar/: __init__.py  main.py
sidecar/src/water_sidecar/routes/: analyze.py
sidecar/src/water_sidecar/tests/: test_analyze.py  test_health.py
(+366 files in other folders)
