[workspace]
members = ["app/src-tauri", "crates/water-core"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "TBD"
publish = false

[workspace.dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
keyring = "3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
rusqlite_migration = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ulid = { version = "1", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
zstd = "0.13"

[workspace.dependencies.tauri]
version = "2"

[workspace.dependencies.tauri-build]
version = "2"

# Dev-only deps
[workspace.dependencies.tempfile]
version = "3"

[workspace.dependencies.pretty_assertions]
version = "1"

[workspace.dependencies.wiremock]
version = "0.6"
