[project]
name = "water-sidecar"
version = "0.1.0"
description = "Water analysis sidecar — FastAPI app spawned by the Rust core"
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi==0.115.0",
  "uvicorn[standard]==0.30.6",
  "pydantic==2.9.2",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.3",
  "httpx==0.27.2",
  "anyio==4.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/water_sidecar"]

[tool.pytest.ini_options]
testpaths = ["src"]
addopts = "-q"
