[package]
name = "water-app"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

[build-dependencies]
tauri-build = { workspace = true, features = [] }

[dependencies]
tauri = { workspace = true, features = [] }
water-core = { path = "../../crates/water-core" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
