[package]
name = "water-app"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

[build-dependencies]
tauri-build = { workspace = true, features = [] }

[dependencies]
tauri = { workspace = true, features = [] }
tauri-plugin-dialog = "2"
water-core = { path = "../../crates/water-core" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
chrono.workspace = true
which = "6"
