[package]
name = "water-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

[features]
default = []
mlx = []

[dependencies]
anyhow.workspace = true
chrono.workspace = true
keyring.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
rusqlite_migration.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
ulid.workspace = true
zstd.workspace = true
sha2 = "0.10"

[dev-dependencies]
pretty_assertions.workspace = true
tempfile.workspace = true
tracing-subscriber.workspace = true
wiremock.workspace = true
